--- a/docs/golang/intro/1-课程介绍.md
+++ b/docs/golang/intro/1-课程介绍.md
@@ -1,27 +1,5 @@
 # 课程介绍
 
-大秦，标准90后
-
-### 专业背景
-
-- 12年+一线各类项目开发经验，熟练C++, Python, Go的开发经验
-
-- 2018年接触并使用go，主导整个技术团队转型go
-
-- 8年以上技术团队管理经验，有丰富的技术实践和线上问题快速定位能力
-
-- 名互联网公司资深开发，技术总监，架构师，产品总监
-
-- 深度Go使用者，目前在一家AI+教育企业任职产研总监，负责产品，研发等一应事项
-
-### 项目经验
-
-- 主导开发日均百万级流量微服务系统
-
-- 设计实现高并发分布式的各类中间
-
-- 从0到1的产研团队组建，技术架构，产市销协同流程落地经验
-
 ### 课程定位
 
 - **入门级+进阶型+项目实战型**的Go语言系统课程
@@ -41,12 +19,35 @@
 ### 学习收益
 
 - 掌握Go语言核心语法与开发技能
-
 - 具备企业级项目开发能力
-
 - 提升就业竞争力与薪资水平
-
 - 获得完整项目经验与面试指导
+
+## 关于大秦
+
+标准90后码农，从一个小小的嵌入式开发实习生开始的，到现在公司产品，研发负责人
+
+**微信号： fly2010love**
+
+### 专业背景
+
+- 12年+一线各类项目开发经验，熟练C++, Python, Go的开发经验
+
+- 2018年接触并使用go，主导整个技术团队转型go
+
+- 8年以上技术团队管理经验，有丰富的技术实践和线上问题快速定位能力
+
+- 知名互联网公司资深开发，技术总监，架构师，产品总监
+
+- 深度Go使用者，目前在一家AI+教育企业任职产研总监，负责产品，研发等一应事项
+
+### 项目经验
+
+- 主导开发日均百万级流量微服务系统
+
+- 设计实现高并发分布式的各类中间
+
+- 从0到1的产研团队组建，技术架构，产市销协同流程落地经验
 
 ## Go语言前景与现状
 
@@ -105,56 +106,6 @@
 | 就业竞争力弱     | 企业级项目+就业指导模块                                      |
 | 学习效率低下     | 半小时精讲+案例驱动教学                                      |
 
-### 学习基础要求
-
-- 了解基本编程概念（变量/循环/函数等）
-
-- 至少一门编程语言基础
-
-- 具备计算机基础知识（操作系统/网络等）
-
-- 无需Go语言基础（从零开始教学）
-
-## 课程内容概述
-
-### 三阶段课程体系
-
-1. **入门基础（30%）**
-
-- Go基础语法
-
-- 数据结构与算法
-
-- 面向对象编程
-
-- 标准库与工具链
-
-1. **进阶应用（40%）**
-
-- 并发编程
-
-- 网络编程
-
-- Web开发基础
-
-1. **项目实战（30%）**
-
-- 常用框架与工具库
-
-- 企业级项目实战
-
-- 就业指导与面试准备
-
-### 单节课结构
-
-1. **语法讲解**（2分钟）
-
-1. **用法分析**（5分钟）
-
-1. **案例实战**（5分钟）
-
-1. **项目应用**（5分钟）
-
 ### 实战项目案例
 
 - 电商系统，登录注册，商品，订单，支付等流程
@@ -167,7 +118,7 @@
 
 ## 加入学习
 
-### 学习方式
+### 学习方式  大秦说AI
 
 - 录播视频随时学习
 
