Go语言并发编程，并发模型，channel，同步原语，并发模式

--- a/docs/golang/advance/2.chan-管道.md
+++ b/docs/golang/advance/2.chan-管道.md
@@ -87,6 +87,7 @@ func orderProcessor(orderChan <-chan Order, resultChan chan<- Order) {
         
         resultChan <- order
     }
+	close(resultChan)
 }
 
 func orderResultCollector(resultChan <-chan Order, done chan<- bool) {
