--- a/docs/golang/intro/1-课程介绍.md
+++ b/docs/golang/intro/1-课程介绍.md
@@ -24,10 +24,7 @@
 - 获得完整项目经验与面试指导
 
 ## 关于大秦
-
 标准90后码农，从一个小小的嵌入式开发实习生开始的，到现在公司产品，研发负责人
-
-**微信号： qingflyfei**
 
 ### 专业背景
 
@@ -136,4 +133,6 @@
 
 - 具备求职竞争力
 
-**让我们一起开启Go语言开发之旅！**
+## 联系大秦
+**微信号： qingflyfei**
+![大秦微信号](../images/wechat_mini.png)
