--- a/docs/golang/intro/1-课程介绍.md
+++ b/docs/golang/intro/1-课程介绍.md
@@ -88,7 +88,7 @@
 
 - 各高校计算机专业大三/大四学生
 
-- 已掌握计算机基础知识（操作系统/数据结构/算法等）
+- 已掌握计算机基础知识（操作系统/数据结构/网络工程/计算机原理，算法等）
 
 - 有C/C++/Java/Python等基础编程经验
 
@@ -107,15 +107,15 @@
 
 - 电商系统，登录注册，商品，订单，支付等流程
 
-### 配套资源
+### 配套资源 
 
+- https://yuanqinguo.github.io/flyfei/
 - 完整课件与代码示例
-
 - 项目需求文档与技术文档
 
 ## 加入学习
 
-### 学习方式  大秦说AI
+### 学习方式  
 
 - 录播视频随时学习
 
