课件示例代码错误

--- a/docs/golang/advance/4.并发模式.md
+++ b/docs/golang/advance/4.并发模式.md
@@ -291,6 +291,7 @@ func safeProducer(ch chan<- Result, wg *sync.WaitGroup) {
         }
         time.Sleep(100 * time.Millisecond)
     }
+	close(ch)
 }
 
 func safeConsumer(ch <-chan Result, wg *sync.WaitGroup) {
@@ -315,7 +316,6 @@ func main() {
     go safeConsumer(resultCh, &safeWg)
     
     safeWg.Wait()
-    close(resultCh)	
 }
 ```
 
