redis系列课程设计预告

--- a/docs/redis/intro/课程介绍.md
+++ b/docs/redis/intro/课程介绍.md
@@ -68,10 +68,10 @@
 
 ## 👥 适合人群
 
-🎓 **大学生应届生**：想快速掌握企业级开发技能，为校招增加筹码
-🌱 **初中级实习生**：已在岗但Redis使用浅层，渴望深度提升
-🔄 **转行开发者**：从Java/Python/其他语言转向Go后端开发
-💡 **自学者**：理论碎片化，急需体系化实战项目串联知识
+- 🎓 **大学生应届生**：想快速掌握企业级开发技能，为校招增加筹码
+- 🌱 **初中级实习生**：已在岗但Redis使用浅层，渴望深度提升
+- 🔄 **转行开发者**：从Java/Python/其他语言转向Go后端开发
+- 💡 **自学者**：理论碎片化，急需体系化实战项目串联知识
 
 ---
 
