进阶2-2, 结果通道关闭panic

--- a/docs/golang/advance/2.chan-管道.md
+++ b/docs/golang/advance/2.chan-管道.md
@@ -87,6 +87,7 @@ func orderProcessor(orderChan <-chan Order, resultChan chan<- Order) {
         
         resultChan <- order
     }
+	time.Sleep(time.Second * 1)
 	close(resultChan)
 }
 
@@ -198,7 +199,8 @@ func main() {
     close(jobs)
     
     // 收集结果
-    for value := range results {
+    for i:=0; i<=5; i++ {
+		value := <-results
         fmt.Printf("Worker 处理结果 %d\n", value)
     }
 }
