--- a/docs/redis/intro/课程介绍.md
+++ b/docs/redis/intro/课程介绍.md
@@ -21,7 +21,7 @@
 每讲穿插**2道高频面试题**，从Redis单线程原理到缓存雪崩解决方案，从分布式锁实现到Feed流架构设计，**题目即代码，代码即答案**
 
 ### **4. 大厂级综合项目**
-第10讲混合使用**多中种Redis数据类型**，从零搭建**社交媒体点赞关注系统**，产出可直接写进简历的完整项目
+第10讲混合使用**多中种Redis数据类型**，从零搭建**课程商品点赞关注系统**，产出可直接写进简历的完整项目
 
 ---
 
@@ -38,7 +38,7 @@
 | **第7讲** | Bitmap/HyperLogLog | 签到与DAU统计 | HyperLogLog误差、Bitmap连续签到   |
 | **第8讲** | 持久化与事务 | 配置中心热更新 | RDB vs AOF选型、Redis事务局限性    |
 | **第9讲** | 性能优化与架构 | Pipeline接口优化 | 缓存三大问题、Cluster哈希槽          |
-| **第10讲** | **综合实战** | **社交媒体系统** | **原子性设计、信息缓存优化**           |
+| **第10讲** | **综合实战** | **课程商品系统** | **原子性设计、信息缓存优化**           |
 
 ---
 
@@ -51,7 +51,7 @@
 
 ✅ **项目实战经验**
 - 完成**10个独立实战案例**（计数器、队列、排行榜等）
-- 产出**1个社交媒体完整项目**（含API、测试、文档）
+- 产出**1个课程商品完整项目**（含API、测试、文档）
 - 代码可直接部署，作为**GitHub亮点项目**展示
 
 ✅ **面试通关能力**
