--- a/docs/redis/intro/课程大纲.md
+++ b/docs/redis/intro/课程大纲.md
@@ -108,7 +108,7 @@
 
 ---
 
-### **第10讲：综合实战 - 社交媒体点赞关注系统**
+### **第10讲：综合实战 - 课程商品点赞关注系统**
 **内容边界：**
 - 强制混合使用：String、Hash、Set、Sorted Set、Bitmap、Pipeline、Lua、过期策略
 - **项目需求**：点赞、关注、排行榜
