--- a/docs/redis/intro/课程介绍.md
+++ b/docs/redis/intro/课程介绍.md
@@ -13,6 +13,7 @@
 - 全程基于**go-redis**客户端，代码100%可运行
 - 演示Go协程+Redis的高并发模式
 - 展示Go在Redis操作中的最佳实践
+- “工程化实战型”的Redis+Go课程，而不是命令教学课
 
 ### **2. 四维学习模式**
 每节课严格遵循：**核心原理 → 真实场景 → 手写代码 → 面试拷问**，确保知识被消化为实操能力
