--- a/docs/redis/intro/课程大纲.md
+++ b/docs/redis/intro/课程大纲.md
@@ -5,6 +5,8 @@
 - HTTP基础
 ---
 
+## 数据结构阶段
+
 ### **第1讲：Redis入门与Go生态对接**
 **内容边界：**
 - Redis核心概念、Docker部署、CLI基础操作
@@ -74,48 +76,136 @@
 
 ### **第7讲：高级类型与HyperLogLog应用**
 **内容边界：**
-- Bitmap、HyperLogLog、Geospatial、Stream
+- Bitmap、HyperLogLog
 - **实战**：**用户签到与DAU统计系统**（Bitmap签到，HyperLogLog统计）
 - 内存对比：HyperLogLog vs Set
 
 
 **总结**：掌握特殊场景下的降本增效方案
 
+## 通信和内核机制阶段
+### **第8讲：Reids Stream与消息队列**
+**内容边界**
+- Redis Stream 使用
+- 生产者消费者，消费者组概念
+- 可靠的Go消息队列
+- Redis Stream 与专业 MQ 的边界
+
+**实战**
+- 编写可靠 Go 消息队列
+
+**总结**
+- Redis Stream实现简单可靠的消息队列
+
+### **第9讲：Redis发布订阅与实时通信模型**
+
+**内容边界：**
+
+* Pub/Sub模型原理
+* `PUBLISH / SUBSCRIBE / PSUBSCRIBE`
+* Channel设计规范
+* Go客户端订阅模型（阻塞、协程、重连）
+* 发布订阅 vs Stream vs MQ 对比
+* 实时系统设计模式
+
+**实战：**
+* 实现Go订阅实时通知
+
+**总结**
+- 理解Redis Pub/Sub是实时通信工具，而不是可靠消息队列
+
+
+
+### **第10讲：Redis核心机制（持久化与事务）**
+
+**内容边界：**
+
+* 持久化机制
+
+  * RDB原理、触发方式、优缺点
+  * AOF日志模型、重写机制
+  * RDB vs AOF选型策略
+* Redis事务机制
+
+  * `MULTI / EXEC / DISCARD`
+  * `WATCH`乐观锁机制
+  * 事务执行流程与原子性边界
+* 事务与Lua的关系
+
+**实战：**
+
+* 编写Go脚本测试RDB/AOF恢复
+* 使用WATCH实现库存扣减示例
+
+**重点陷阱：**
+
+* Redis事务 ≠ ACID事务
+* 无回滚机制
+* 命令入队错误 vs 执行错误
+
+**总结：**
+理解Redis数据安全与一致性边界，避免把Redis当关系数据库使用。
+
 ---
 
-### **第8讲：Redis核心机制与发布订阅**
+## 生产架构阶段
+
+### **第11讲：性能优化与高可用架构**
+
 **内容边界：**
-- 持久化：RDB与AOF原理、配置、选型
-- 事务：`MULTI/EXEC/WATCH`的有限原子性
-- 发布订阅：`PUBLISH/SUBSCRIBE`
-- **实战**：**配置中心**（监听配置变更，Go服务热更新）
-- 机制局限性：事务非ACID、发布订阅无持久化
 
+* 性能优化
+  * Pipeline
+  * Lua脚本优化
+  * 连接池设计
+* 高可用架构
 
-**总结**：理解Redis底层机制，避免误用陷阱
+  * 主从复制
+  * Sentinel
+  * Cluster分片
+* 缓存问题
+
+  * 雪崩
+  * 击穿
+  * 穿透
+
+**实战：**
+
+* 使用Pipeline优化接口性能
+* 压测优化前后QPS
+
+**总结**
+- 掌握生产级Redis调优与架构思维。
 
 ---
 
-### **第9讲：性能优化与高可用架构**
+### **第12讲：综合实战 - 社交媒体点赞关注系统**
+
 **内容边界：**
-- 性能优化：Pipeline、Lua脚本、连接池
-- 高可用：主从复制、哨兵、Cluster
-- **实战**：**Pipeline优化接口性能**（合并多次查询）
-- 缓存策略：雪崩、击穿、穿透
+
+* 强制混合使用：
+
+  * String
+  * Hash
+  * Set
+  * Sorted Set
+  * Bitmap
+  * Pipeline
+  * Lua
+  * 过期策略
+
+**项目需求：**
+
+* 点赞系统
+* 关注关系
+* 热度排行榜
+* 活跃用户统计
+
+**交付物：**
+
+* 完整Go项目课件和代码
+* 大型团队Redis使用规范
+* 大秦授课视频
 
 
-**总结**：掌握生产级Redis调优与架构思维
 
----
-
-### **第10讲：综合实战 - 社交媒体点赞关注系统**
-**内容边界：**
-- 强制混合使用：String、Hash、Set、Sorted Set、Bitmap、Pipeline、Lua、过期策略
-- **项目需求**：点赞、关注、排行榜
-
-
-### **交付物**
-- 完整Go项目代码（分层架构）
-- 单元测试与压测报告
-- 大秦授课视频
-- **最终回顾**：全课程知识点脑图、Redis选型决策树、面试高频考点汇总
